--- a/styles/header.css
+++ b/styles/header.css
@@ -3,7 +3,15 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
+    position: fixed;
+    background-color: white;
+    top: 0;
+    left: 0;
+    right: 0;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: rgb(164, 164, 164);
+    z-index: 100;
 }
 
 .left-section {
@@ -109,4 +117,27 @@
 .current-user-picture {
     height: 34px;
     border-radius: 17px;
+}
+
+.notifications-icon-container {
+    position: relative;
+}
+
+.nptifications-count {
+    position: absolute;
+    background-color: rgb(198, 0, 0);
+    color: white;
+    top: -1px;
+    right: -3px;
+    font-weight: 500;
+    font-size: 10px;
+    font-family: Roboto, Arial;
+    padding-left: 5px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-right: 5px;
+    border-radius: 14px;
+
+
+
 }
