--- a/styles/video.css
+++ b/styles/video.css
@@ -26,6 +26,7 @@
 
  .thumbnail-row {
      margin-bottom: 20px;
+     position: relative;
  }
 
  .video-author,
@@ -43,4 +44,20 @@
      grid-template-columns: 1fr 1fr 1fr;
      column-gap: 16px;
      row-gap: 40px;
+ }
+
+ .video-time {
+     font-family: Roboto, Arial;
+     font-size: 10px;
+     font-weight: 500;
+     background-color: black;
+     color: white;
+     border-radius: 2px;
+     position: absolute;
+     bottom: 10px;
+     right: 4px;
+     padding-left: 3px;
+     padding-right: 3px;
+     padding-top: 3px;
+     padding-bottom: 3px;
  }
