--- a/styles/header.css
+++ b/styles/header.css
@@ -72,9 +72,54 @@
     border-bottom-right-radius: 10px;
 }
 
+.search-button,
+.voice-search-button,
+.upload-icon-container,
+.youtube-apps-icon-container,
+.notifications-icon-container {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+
+}
+
+.search-button .tooltip,
+.voice-search-button .tooltip,
+.upload-icon-container .tooltip,
+.youtube-apps-icon-container .tooltip,
+.notifications-icon-container .tooltip {
+    position: absolute;
+    background-color: gray;
+    color: white;
+    padding-top: 6px;
+    padding-left: 8px;
+    padding-bottom: 6px;
+    padding-right: 8px;
+    border-radius: 7px;
+    font-size: 13px;
+    bottom: -30px;
+
+    opacity: 0;
+    transition: opacity 0.15s;
+    pointer-events: none;
+    white-space: nowrap;
+    font-family: Roboto, Arial;
+}
+
+.search-button:hover .tooltip,
+.voice-search-button:hover .tooltip,
+.upload-icon-container:hover .tooltip,
+.youtube-apps-icon-container:hover .tooltip,
+.notifications-icon-container:hover .tooltip {
+    opacity: 1;
+}
+
+
 .search-icon {
     height: 25px;
-    margin-top: 4px;
+
 }
 
 .voice-search-button {
@@ -87,7 +132,7 @@
 
 .voice-search-icon {
     height: 24px;
-    margin-top: 4px;
+
 }
 
 .right-section {
@@ -137,7 +182,5 @@
     padding-bottom: 2px;
     padding-right: 5px;
     border-radius: 14px;
-
-
 
 }
