--- a/styles/video.css
+++ b/styles/video.css
@@ -8,7 +8,7 @@
      font-size: 14px;
      font-weight: 500;
      line-height: 20px;
-     margin-bottom: 12px;
+     margin-bottom: 9px;
  }
 
 
@@ -20,12 +20,12 @@
 
 
  .profile-picture {
-     width: 40px;
+     width: 36px;
      border-radius: 50px;
  }
 
  .thumbnail-row {
-     margin-bottom: 20px;
+     margin-bottom: 9px;
      position: relative;
  }
 
@@ -46,6 +46,25 @@
      row-gap: 40px;
  }
 
+ @media(max-width:900px) {
+     .video-grid {
+         grid-template-columns: 1fr 1fr;
+     }
+ }
+
+ @media (min-width: 901px) and (max-width: 1269px) {
+     .video-grid {
+         grid-template-columns: 1fr 1fr 1fr;
+     }
+ }
+
+
+ @media(min-width:1270px) {
+     .video-grid {
+         grid-template-columns: 1fr 1fr 1fr 1fr;
+     }
+ }
+
  .video-time {
      font-family: Roboto, Arial;
      font-size: 10px;
@@ -56,8 +75,5 @@
      position: absolute;
      bottom: 10px;
      right: 4px;
-     padding-left: 3px;
-     padding-right: 3px;
-     padding-top: 3px;
-     padding-bottom: 3px;
+     padding: 3px;
  }
